# factor-model

./: .env.example  .gitignore  CLAUDE.md  MATH.md  README.md  app.py  pyproject.toml
notebooks/: exploration.ipynb  regression_comparison.ipynb
src/: config.py  data_loader.py  factor_model.py  factors.py  portfolio.py  universe.py  visualization.py
